[fix] fix virtual rows width to be visible in small screens

--- a/src/DataGrid/DataGridComponents/VirtualRows/DataGridVirtualRows.css
+++ b/src/DataGrid/DataGridComponents/VirtualRows/DataGridVirtualRows.css
@@ -3,19 +3,3 @@
     min-width:100%;
     position: relative;
 }
-
-.ReactVirtualized__Grid__innerScrollContainer{
-    min-width: 100%!important;
-    width:fit-content!important;
-    box-sizing: border-box;
-
-}
-
-.ReactVirtualized__List{
-    min-width: 100%!important;
-    width:fit-content!important;
-    box-sizing: border-box;
-    will-change: unset!important;
-
-
-}
